{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 267,
  "lineage": "7b6a5dbe-7290-8533-8ef6-3d7c8e3218d2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b947e38d33bfd60",
            "arn": "arn:aws:ec2:ap-south-1:891377118251:elastic-ip/eipalloc-00b947e38d33bfd60",
            "domain": "vpc",
            "id": "eipalloc-00b947e38d33bfd60",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-201-196-145.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.196.145",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-nat-ip"
            },
            "tags_all": {
              "Name": "dev-nat-ip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377118251:internet-gateway/igw-01558097b787414c2",
            "id": "igw-01558097b787414c2",
            "owner_id": "891377118251",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-054e4f661fb147fcd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.truecouch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00b947e38d33bfd60",
            "association_id": "eipassoc-04f63b00eac11849c",
            "connectivity_type": "public",
            "id": "nat-05692a54e070ed650",
            "network_interface_id": "eni-0dc48e413c84a8f1c",
            "private_ip": "10.10.1.218",
            "public_ip": "13.201.196.145",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06b85c17703882297",
            "tags": {
              "Name": "dev-nat-gw"
            },
            "tags_all": {
              "Name": "dev-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.myapp-igw",
            "aws_subnet.public_subnet-1",
            "aws_vpc.truecouch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377118251:route-table/rtb-0d014c869f8b76e15",
            "id": "rtb-0d014c869f8b76e15",
            "owner_id": "891377118251",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05692a54e070ed650",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-RT"
            },
            "tags_all": {
              "Name": "dev-private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-054e4f661fb147fcd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377118251",
            "id": "rtb-0d014c869f8b76e15",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.myapp-igw",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnet-1",
            "aws_vpc.truecouch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377118251:route-table/rtb-029ae6ab82e1a3b28",
            "id": "rtb-029ae6ab82e1a3b28",
            "owner_id": "891377118251",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01558097b787414c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-RT"
            },
            "tags_all": {
              "Name": "dev-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-054e4f661fb147fcd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377118251",
            "id": "rtb-029ae6ab82e1a3b28",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_vpc.truecouch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a841447b00e431d5",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d014c869f8b76e15",
            "subnet_id": "subnet-01478186e8a3f38f2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.myapp-igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet-1",
            "aws_subnet.public_subnet-1",
            "aws_vpc.truecouch-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad0f5c8ef0f29026",
            "region": "ap-south-1",
            "route_table_id": "rtb-0d014c869f8b76e15",
            "subnet_id": "subnet-043cba921fd7cc5ec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.myapp-igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet-1",
            "aws_subnet.public_subnet-1",
            "aws_vpc.truecouch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a53ed77069f170b5",
            "region": "ap-south-1",
            "route_table_id": "rtb-029ae6ab82e1a3b28",
            "subnet_id": "subnet-06b85c17703882297"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet-1",
            "aws_vpc.truecouch-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f198940ed4d9ab9",
            "region": "ap-south-1",
            "route_table_id": "rtb-029ae6ab82e1a3b28",
            "subnet_id": "subnet-02d7c55dd730dd67b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.myapp-igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet-1",
            "aws_vpc.truecouch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377118251:subnet/subnet-01478186e8a3f38f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01478186e8a3f38f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377118251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Private-Subnet-1"
            },
            "tags_all": {
              "Name": "Private-Subnet-1"
            },
            "vpc_id": "vpc-054e4f661fb147fcd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377118251",
            "id": "subnet-01478186e8a3f38f2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.truecouch-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377118251:subnet/subnet-043cba921fd7cc5ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043cba921fd7cc5ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377118251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Private-Subnet-2"
            },
            "tags_all": {
              "Name": "Private-Subnet-2"
            },
            "vpc_id": "vpc-054e4f661fb147fcd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377118251",
            "id": "subnet-043cba921fd7cc5ec",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.truecouch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377118251:subnet/subnet-06b85c17703882297",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b85c17703882297",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377118251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-054e4f661fb147fcd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377118251",
            "id": "subnet-06b85c17703882297",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.truecouch-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377118251:subnet/subnet-02d7c55dd730dd67b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d7c55dd730dd67b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377118251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-054e4f661fb147fcd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377118251",
            "id": "subnet-02d7c55dd730dd67b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.truecouch-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "truecouch-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:891377118251:vpc/vpc-054e4f661fb147fcd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02c14539917b8ae7c",
            "default_route_table_id": "rtb-03d7958732e14dc8a",
            "default_security_group_id": "sg-0a9618fffb9c4b720",
            "dhcp_options_id": "dopt-0b74fa30eb92190ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054e4f661fb147fcd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03d7958732e14dc8a",
            "owner_id": "891377118251",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}